tests/baselines/reference/parserForStatement6.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserForStatement6.ts(1,6): error TS2304: Cannot find name 'foo'.
tests/cases/conformance/parser/ecmascript5/Statements/parserForStatement6.ts(1,6): error TS2406: Invalid left-hand side in 'for...in' statement.
tests/cases/conformance/parser/ecmascript5/Statements/parserForStatement6.ts(1,15): error TS2304: Cannot find name 'b'.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserForStatement6.ts (3 errors) ====
    for (foo() in b) {
         ~~~
!!! error TS2304: Cannot find name 'foo'.
         ~~~~~
!!! error TS2406: Invalid left-hand side in 'for...in' statement.
                  ~
!!! error TS2304: Cannot find name 'b'.
    }